# parakeet.cpp

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  pr.md
.github/workflows/: release.yml
cmake/: ParakeetConfig.cmake.in  parakeet.pc.in
examples/: CMakeLists.txt  README.md
examples/basic/: CMakeLists.txt  README.md  main.cpp
examples/batch/: CMakeLists.txt  README.md  main.cpp
examples/beam-search/: CMakeLists.txt  README.md  main.cpp
examples/c-api/: CMakeLists.txt  README.md  main.c
examples/cli/: CMakeLists.txt  README.md
examples/diarize/: CMakeLists.txt  README.md  main.cpp
examples/diarized-transcription/: CMakeLists.txt  README.md  main.cpp
examples/gpu/: CMakeLists.txt  README.md  main.cpp
examples/nemotron/: CMakeLists.txt  README.md  main.cpp
examples/phrase-boost/: CMakeLists.txt  README.md  main.cpp
examples/server/: CMakeLists.txt  README.md  main.cpp
examples/stream/: CMakeLists.txt  README.md  main.cpp
examples/timestamps/: CMakeLists.txt  README.md  main.cpp
examples/vad/: CMakeLists.txt  README.md  main.cpp
include/: parakeet.hpp
include/parakeet/: audio.hpp  audio_io.hpp  config.hpp  ctc.hpp  diarize.hpp  encoder.hpp  eou.hpp  lstm.hpp  nemotron.hpp  parakeet.hpp  parakeet_c.h  phrase_boost.hpp  rnnt.hpp  sortformer.hpp  streaming_encoder.hpp  tdt.hpp  tdt_ctc.hpp  timestamp.hpp  transcribe.hpp  transformer.hpp  vocab.hpp  wav.hpp
include/parakeet/api/: diarize.hpp  parakeet_c.h  transcribe.hpp
include/parakeet/audio/: audio.hpp  audio_io.hpp  vad.hpp
include/parakeet/decode/: arpa_lm.hpp  beam_search.hpp  phrase_boost.hpp  tdt_beam_search.hpp  timestamp.hpp  vocab.hpp
include/parakeet/models/: config.hpp  ctc.hpp  encoder.hpp  eou.hpp  lstm.hpp  nemotron.hpp  rnnt.hpp  silero_vad.hpp  sortformer.hpp  streaming_encoder.hpp  tdt.hpp  tdt_ctc.hpp  transformer.hpp
include/parakeet/profile/: signposts.hpp
scripts/: compare_encoder.py  compare_features.py  convert_nemo.py  convert_silero_vad.py  debug_encoder.py  extract_vocab.py  nemo_inference.py  package_release.sh  pytorch_benchmark.py  quantize_int8.py
src/: audio.cpp  audio_io.cpp  bench.cpp  ctc.cpp  diarize.cpp  encoder.cpp  eou.cpp  lstm.cpp  main.cpp  nemotron.cpp  parakeet.cpp  parakeet_c.cpp  phrase_boost.cpp  rnnt.cpp  sortformer.cpp  streaming_encoder.cpp  tdt.cpp  tdt_ctc.cpp  timestamp.cpp  transformer.cpp  vocab.cpp  wav.cpp
src/api/: diarize.cpp  parakeet_c.cpp  transcribe.cpp
src/audio/: audio.cpp  audio_io.cpp  vad.cpp
src/decode/: arpa_lm.cpp  beam_search.cpp  phrase_boost.cpp  tdt_beam_search.cpp  timestamp.cpp  vocab.cpp
src/models/: ctc.cpp  encoder.cpp  eou.cpp  lstm.cpp  nemotron.cpp  rnnt.cpp  silero_vad.cpp  sortformer.cpp  streaming_encoder.cpp  tdt.cpp  tdt_ctc.cpp  transformer.cpp
tests/: test_all.cpp  test_c_api.c  test_linear_int8_mpsmm_parity.cpp  test_linear_mpsmm_parity.cpp  test_quantize_int8.py
